src/ui/modules/montr-core/index.less
@import '~antd/es/style/themes/default.less';
// @import (css) url("//fonts.googleapis.com/css?family=Open+Sans:400");
// @import (css) url('//fonts.googleapis.com/css?family=Nunito&display=swap');

h2, .ant-modal-header .ant-modal-title, .ant-drawer-title {
	font-weight: bold;
}

.logo {
	font-weight: bold;
	font-size: 20px;
	color: #1890ff;
	/* padding: 8px 0 0 22px; */
    line-height: 64px;
	height: 64px;
    vertical-align: baseline;
}

.ant-layout.private-layout {
	/* .ant-layout-sider  {
		box-shadow: 0 1px 4px rgba(0,21,41,.08);

		.ant-menu-root {
			border-right: 0;
		}
	}

	.logo {
	} */

	.ant-menu-vertical .user-menu .ant-menu-submenu-title {
		height: 64px;
	}
	.ant-layout-footer {
		padding: 24px;
	}
}

.ant-layout.public-layout {
	background-color: inherit;

	.logo {
	}

	.ant-layout-header {
		background-color: inherit;
	}

	.ant-layout-footer {
		background-color: inherit;
	}
}

.ant-layout {
	.ant-layout-sider {
		/* text-transform: uppercase; */
	}

	.ant-page-header {
		padding: 0; // temp, remove ant-layout-content padding

		.ant-page-header-heading-title {
			font-weight: bold;
		}
	}

	.ant-layout-content {
		overflow: initial;
		padding: 16px 24px;
	}

	.ant-layout-footer {

		.language-selector {
			float: right;
			padding-right: 10px;
			min-width: 100px;

			a {
				color: @normal-color;
			}
		}

	}
}

.ant-menu {
	.menu-header {
		cursor: default;
	}
}

.ant-alert {
	margin-bottom: 16px;
}

.toolbar {

	margin-top: 9px;
	margin-bottom: 4px;

	&.toolbar-left {
		float: left;

		.ant-btn, .ant-btn-group, .ant-radio-group, .ant-select {
			margin-right: 6px;
			margin-bottom: 4px;
		}

		.ant-btn-group .ant-btn {
			margin-right: 0;
		}
	}

	&.toolbar-right {
		float: right;

		.ant-btn, .ant-btn-group, .ant-radio-group, .ant-select {
			margin-left: 6px;
			margin-bottom: 4px;
		}

		.ant-btn-group .ant-btn {
			margin-left: 0;
		}
	}

	&.toolbar-bottom {
		position: absolute;
		right: 0;
		bottom: 0;
		width: 100%;
		margin-bottom: 0;
		border-top: 1px solid #e9e9e9;
		padding: 10px 16px;
		background: #fff;
		text-align: right;

		.ant-btn, .ant-btn-group, .ant-radio-group, .ant-select {
			margin-left: 6px;
			margin-bottom: 4px;
		}

		.ant-btn-group .ant-btn {
			margin-left: 0;
		}
	}

	.ant-btn-group, .ant-radio-group {
		line-height: 1.5;
	}
}

.bg-white {
	background-color: #fff !important;
}

.single-line-text {
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

.data-form-mode-view {
	.ant-form-item {
		margin-bottom: 16px;

		.ant-form-item-control-input {
			min-height: auto;
		}
	}
}

.ant-form-item-label {
	label {
		height: auto;
		white-space: normal;
	}
}

.empty-field {
	color: lightgrey;
}

.external-logins {
	.adn {
		background-color: #D87A68
	}
	.bitbucket {
		background-color: #205081
	}
	.dropbox {
		background-color: #1087DD
	}
	.facebook {
		background-color: #3B5998
	}
	.flickr {
		background-color: #2BA9E1
	}
	.foursquare {
		background-color: #f94877
	}
	.github {
		background-color: #444444
	}
	.google {
		background-color: #DD4B39
	}
	.instagram {
		background-color: #3F729B
	}
	.linkedin {
		background-color: #007BB6
	}
	.microsoft, .windows {
		background-color: #2672EC
	}
	.odnoklassniki {
		background-color: #F4731C
	}
	.openid {
		background-color: #F7931E
	}
	.pinterest {
		background-color: #CB2027
	}
	.reddit {
		background-color: #EFF7FF
	}
	.soundcloud {
		background-color: #FF5500
	}
	.tumblr {
		background-color: #CB2027
	}
	.twitter {
		background-color: #55ACEE
	}
	.vimeo {
		background-color: #1AB7EA
	}
	.vk {
		background-color: #587EA3
	}
	.yahoo {
		background-color: #720E9E
	}
}

.grid-content {
	width: 100%;
    height: 100%;
	min-height: 100%;

	.page-with-menu {
		display: flex;
		width: 100%;
		height: 100%;
		overflow: auto;
		.menu {
			width: 180px;
			border-right: @border-width-base @border-style-base @border-color-split;
			.ant-menu-inline {
				border: none;
			}
		}
		.content {
			flex: 1;
			padding: 8px 40px;
		}

		@media screen and (max-width: @screen-md) {
			flex-direction: column;
			.menu {
				width: 100%;
				border: none;
			}
			.content {
				padding: 40px;
			}
		}
	}
}

